--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "mongoose": "^5.7.3"
     },
     "dependencies": {
-        "express": "^4.17.1"
+        "express": "^4.17.1",
+        "joi": "^14.3.1"
     }
 }
