--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     },
     "dependencies": {
         "express": "^4.17.1",
-        "joi": "^14.3.1"
+        "helmet": "^3.21.1",
+        "joi": "^14.3.1",
+        "morgan": "^1.9.1"
     }
 }
