--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "config": "^3.2.3",
+        "debug": "^4.1.1",
         "express": "^4.17.1",
         "helmet": "^3.21.1",
         "joi": "^14.3.1",
