--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "config": "^3.2.3",
         "debug": "^4.1.1",
         "express": "^4.17.1",
+        "fawn": "^2.1.5",
         "helmet": "^3.21.1",
         "joi": "^14.3.1",
         "morgan": "^1.9.1",
