--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "fawn": "^2.1.5",
         "helmet": "^3.21.1",
         "joi": "^14.3.1",
+        "joi-objectid": "^3.0.1",
         "morgan": "^1.9.1",
         "pug": "^2.0.4"
     }
