--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
         "helmet": "^3.21.1",
         "joi": "^14.3.1",
         "joi-objectid": "^3.0.1",
+        "joi-password-complexity": "^3.1.0",
+        "lodash": "^4.17.15",
         "morgan": "^1.9.1",
         "pug": "^2.0.4"
     }
