Project Vidly: storing user passwords updated using bcrypt and hashing with salt

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "mongoose": "^5.7.6"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "config": "^3.2.3",
         "debug": "^4.1.1",
         "express": "^4.17.1",
