--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "joi": "^14.3.1",
         "joi-objectid": "^3.0.1",
         "joi-password-complexity": "^3.1.0",
+        "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
         "morgan": "^1.9.1",
         "pug": "^2.0.4"
