--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "config": "^3.2.4",
         "debug": "^4.1.1",
         "express": "^4.17.1",
+        "express-async-errors": "^3.1.1",
         "fawn": "^2.1.5",
         "helmet": "^3.21.1",
         "joi": "^14.3.1",
