--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
         "morgan": "^1.9.1",
-        "pug": "^2.0.4"
+        "pug": "^2.0.4",
+        "winston": "^3.2.1"
     }
 }
