--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "license": "MIT",
     "devDependencies": {
         "jest": "^24.9.0",
-        "mongoose": "^5.7.6"
+        "mongoose": "^5.7.6",
+        "supertest": "^4.0.2"
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
