--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "joi-password-complexity": "^3.1.0",
         "jsonwebtoken": "^8.5.1",
         "lodash": "^4.17.15",
+        "moment": "^2.24.0",
         "morgan": "^1.9.1",
         "pug": "^2.0.4",
         "winston": "^3.2.1",
