--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "compression": "^1.7.4",
         "config": "^3.2.4",
         "debug": "^4.1.1",
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
         "fawn": "^2.1.5",
-        "helmet": "^3.21.1",
+        "helmet": "^3.21.2",
         "joi": "^14.3.1",
         "joi-objectid": "^3.0.1",
         "joi-password-complexity": "^3.1.0",
