--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
         "express": "^4.17.1",
         "express-async-errors": "^3.1.1",
         "fawn": "^2.1.5",
+        "global": "^4.4.0",
         "helmet": "^3.21.2",
+        "heroku-cli": "^7.0.9",
         "joi": "^14.3.1",
         "joi-objectid": "^3.0.1",
         "joi-password-complexity": "^3.1.0",
