--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
         "winston-mongodb": "^5.0.1"
     },
     "scripts": {
-        "test": "jest --watchAll --verbose --runInBand --coverage"
+        "test": "jest --watchAll --verbose --runInBand --coverage",
+        "start": "node project_vidly/index.js"
+    },
+    "engines": {
+        "node": "12.14.0"
     }
 }
